# Typing-Program-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  TypingTest  cmake_install.cmake  test
Composite/header/: Passage.hpp  Test.hpp  Text.hpp  TypingTest.hpp  UserList.hpp  Word.hpp  init.hpp
Composite/src/: Passage.cpp  Test.cpp  TypingTest.cpp  UserList.cpp  Word.cpp  init.cpp
Observer/: observer.cpp  observer2.cpp
Observer/header/: ObserverTest.hpp
Observer/src/: unit_test.cpp
Strategy/TextGenerator/: ParagraphGenerator.hpp  QuateGenerator.hpp  TextGenerator.hpp  TextGenerator_Paragraph_English.txt  TextGenerator_Quate_English.txt  WordSetGenerator.hpp
Strategy/TextGenerator/DataBase/: DataBase.hpp  TextGenerator_Paragraph_English.txt  TextGenerator_Quate_English.txt  TextGenerator_Quote_English.txt  TextGenerator_WordSet_English.txt
Strategy/TextGenerator/TextGenerator/: ParagraphGenerator.hpp  QuateGenerator.hpp  QuoteGenerator.hpp  TextGenerator.hpp  WordSetGenerator.hpp
tests/: composite_test.hpp  strategy_test.hpp  unit_test.cpp
